--- a/Library Brider 2/Properties/Settings.settings
+++ b/Library Brider 2/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="LikeTracks" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ApplicationKey" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">3dbe7290d1e24bc8a85001c2374b4b08</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
