Local search, local track sorting

--- a/Library Brider 2/App.config
+++ b/Library Brider 2/App.config
@@ -18,9 +18,6 @@
       <setting name="ScanDepth" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="FileOrder" serializeAs="String">
-        <value>0</value>
-      </setting>
       <setting name="NotFoundBehaviour" serializeAs="String">
         <value>0</value>
       </setting>
@@ -28,6 +25,12 @@
         <value>False</value>
       </setting>
       <setting name="LikeTracks" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="FileOrder" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="FileOrderReversed" serializeAs="String">
         <value>False</value>
       </setting>
     </Library_Brider_2.Properties.Settings>
