--- a/Library Brider 2/packages.config
+++ b/Library Brider 2/packages.config
@@ -4,5 +4,6 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="SpotifyAPI.Web" version="5.1.1" targetFramework="net472" />
   <package id="SpotifyAPI.Web.Auth" version="5.1.1" targetFramework="net472" />
+  <package id="taglib" version="2.1.0.0" targetFramework="net472" />
   <package id="Unosquare.Swan.Lite" version="1.3.1" targetFramework="net472" />
 </packages>
