--- a/Library Brider 2/App.config
+++ b/Library Brider 2/App.config
@@ -4,9 +4,6 @@
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="Library_Brider_2.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="Library_Brider_2.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
   </configSections>
   <startup> 
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -27,6 +24,9 @@
       <setting name="LikeTracks" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="ApplicationKey" serializeAs="String">
+        <value />
+      </setting>
       <setting name="FileOrder" serializeAs="String">
         <value>0</value>
       </setting>
@@ -35,11 +35,4 @@
       </setting>
     </Library_Brider_2.Properties.Settings>
   </userSettings>
-  <applicationSettings>
-    <Library_Brider_2.Properties.Settings>
-      <setting name="ApplicationKey" serializeAs="String">
-        <value>3dbe7290d1e24bc8a85001c2374b4b08</value>
-      </setting>
-    </Library_Brider_2.Properties.Settings>
-  </applicationSettings>
 </configuration>
