--- a/Library Brider 2/Library Brider 2.csproj
+++ b/Library Brider 2/Library Brider 2.csproj
@@ -83,6 +83,9 @@
     </ApplicationDefinition>
     <Compile Include="Generic Classes\Filter.cs" />
     <Compile Include="Generic Classes\LocalTrack.cs" />
+    <Compile Include="Spotify\Windows\AuthWindow.xaml.cs">
+      <DependentUpon>AuthWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Spotify\Windows\ReplaceDialog.xaml.cs">
       <DependentUpon>ReplaceDialog.xaml</DependentUpon>
     </Compile>
@@ -104,6 +107,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Spotify\Windows\AuthWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Spotify\Windows\ReplaceDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
