Fixed settings panel.

--- a/Library Brider 2/App.config
+++ b/Library Brider 2/App.config
@@ -24,14 +24,14 @@
       <setting name="LikeTracks" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="ApplicationKey" serializeAs="String">
-        <value />
-      </setting>
       <setting name="FileOrder" serializeAs="String">
         <value>0</value>
       </setting>
       <setting name="FileOrderReversed" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="ClientID" serializeAs="String">
+        <value>0</value>
       </setting>
     </Library_Brider_2.Properties.Settings>
   </userSettings>
