Added audio fingerprinting with options

--- a/Library Brider 2/App.config
+++ b/Library Brider 2/App.config
@@ -31,7 +31,13 @@
         <value>False</value>
       </setting>
       <setting name="ClientID" serializeAs="String">
-        <value>0</value>
+        <value />
+      </setting>
+      <setting name="AcoustID" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="UseFingerprint" serializeAs="String">
+        <value>False</value>
       </setting>
     </Library_Brider_2.Properties.Settings>
   </userSettings>
