--- a/Library Brider 2/Properties/Settings.settings
+++ b/Library Brider 2/Properties/Settings.settings
@@ -21,7 +21,13 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="ClientID" Type="System.String" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AcoustID" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="UseFingerprint" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
