--- a/Library Brider 2/packages.config
+++ b/Library Brider 2/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AcoustID.NET" version="1.3.3" targetFramework="net472" />
   <package id="EmbedIO" version="3.4.3" targetFramework="net472" />
+  <package id="NAudio" version="1.10.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="SpotifyAPI.Web" version="6.0.0-beta.6" targetFramework="net472" />
   <package id="SpotifyAPI.Web.Auth" version="6.0.0-beta.6" targetFramework="net472" />
